--- a/style.css
+++ b/style.css
@@ -15,12 +15,14 @@ html, body {
 }
 
 .gameField {
+    padding-top: 50px;
     background-color: lightskyblue;
     height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
+    gap: 30px;
+
 }
 
 .startDiv {
@@ -30,10 +32,10 @@ html, body {
     justify-content: center;
     align-items: center;
     gap: 10px;
+    padding-bottom: 50px;
 }
 
 .board {
-    margin-top: 150px;
     height: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -41,6 +43,10 @@ html, body {
     height: 500px;
     width: 500px;
     border: 2px solid black;
+}
+
+.player {
+    margin: 0;
 }
 
 .board1 {
