Fix bugs, add dialog, start styling

--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ html, body {
     padding: 0;
     display: flex;
     flex-direction: column;
+    background-color: #567;
+    color: #e0dfdc;
 }
 
 h3 {
@@ -11,28 +13,20 @@ h3 {
 }
 
 .header {
-    background-color: lightgreen;
-    height: 70px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin-top: 20px;
+    height: 100px;
+    align-self: center;
+    font-size: 3em;
+    color: #e0dfdc;
+    background-color: #567;
+    letter-spacing: .1em;
+    text-shadow: 0 -1px 0 #fff, 0 1px 0 #2e2e2e, 0 2px 0 #2c2c2c, 0 3px 0 #2a2a2a, 0 4px 0 #282828, 0 5px 0 #262626, 0 6px 0 #242424, 0 7px 0 #222, 0 8px 0 #202020, 0 9px 0 #1e1e1e, 0 10px 0 #1c1c1c, 0 11px 0 #1a1a1a, 0 12px 0 #181818, 0 13px 0 #161616, 0 14px 0 #141414, 0 15px 0 #121212, 0 22px 30px rgba(0, 0, 0, 0.9);
 }
-
-/* .gameField {
-    padding-top: 20px;
-    background-color: lightskyblue;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 15px;
-} */
 
 .game {
     padding-top: 20px;
-    background-color: lightskyblue;
+    background-color: #567;
     height: 100%;
-    /* display: flex; */
     flex-direction: column;
     align-items: center;
     gap: 15px;
@@ -42,22 +36,27 @@ h3 {
 .startDiv {
     height: 100%;
     display: flex;
-    background-color: lightskyblue;
+    background-color: #567;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     gap: 10px;
-    padding-bottom: 50px;
+    margin-top: 150px;
+}
+
+button {
+    border-radius: 15px;
 }
 
 .board {
     height: 100%;
     display: grid;
+    gap: 4px;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     height: 500px;
     width: 500px;
-    border: 2px solid black;
+    border: none;
 }
 
 .board1 {
@@ -65,7 +64,17 @@ h3 {
 }
 
 .cell {
-    background-color: coral;
+    background-color: rgb(156, 196, 156);
+}
+
+.x {
+    background-image: url('../tic-tac-toe/images/TIC.png');
+    background-size: cover;
+}
+
+.o {
+    background-image: url('../tic-tac-toe/images/TAC.png');
+    background-size: cover;
 }
 
 .footer {
@@ -75,3 +84,16 @@ h3 {
     justify-content: center;
     align-items: center;
 }
+
+dialog {
+    height: 100px;
+    width: 50px;
+    display: none;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: center;
+}
+
+/* dialog[open] {
+    display: flex;
+} */
