--- a/style.css
+++ b/style.css
@@ -9,8 +9,11 @@ html, body {
     font-family: "Helvetica Neue", sans-serif;
 }
 
-h3 {
+h2 {
     margin: 0;
+    margin-top: 10px;
+    letter-spacing: .1em;
+    color: #46c8e9;
 }
 
 .logo {
@@ -53,10 +56,9 @@ h3 {
       }
 }
 
-.game {
-    padding-top: 20px;
+.game, .gameUi {
+    padding-top: 40px;
     background: transparent; 
-    height: 100%;
     flex-direction: column;
     align-items: center;
     gap: 15px;
@@ -101,10 +103,7 @@ input {
     font-size: 1.5em;
     width: 240px;
     padding-left: 15px;
-}
-
-input::placeholder {
-    color: #000000;
+    caret-color: white;
 }
 
 input:focus {
@@ -128,6 +127,7 @@ button {
 .startBtn {
     border: 2px solid #8000ff;
     color: #8000ff;
+    padding: 0;
 }
 
 .startBtn:hover {
@@ -137,8 +137,19 @@ button {
 }
 
 .reset, .restart {
-    border: 2px solid #00f7ff;
-    color: #00f7ff;
+    border: 2px solid #46c8e9;
+    color: #46c8e9;
+}
+
+.reset:hover, .restart:hover, .closeDialog:hover {
+    background: #46c8e9;
+    color: #000;
+    box-shadow: 0 0 5px #46c8e9, 0 0 5px #46c8e9, 0 0 5px #46c8e9;
+}
+
+.closeDialog {
+    border: 2px solid black;
+    color: black;
 }
 
 .board {
@@ -157,7 +168,7 @@ button {
 }
 
 .cell {
-    background-color: #00f7ff;
+    background-color: #9bd4e2;
     border: none;
 }
 
@@ -185,15 +196,17 @@ button {
 }
 
 .gameFooter {
-    color: #00f7ff;
+    color: #2cc2e7;
 }
 
 dialog {
-    height: 200px;
-    width: 200px;
+    height: 150px;
+    width: 150px;
     display: none;
     flex-direction: column;
     gap: 10px;
     align-items: center;
     justify-content: center;
+    background: #9bd4e2;
+    box-shadow: 0 0 5px #9bd4e2, 0 0 10px #9bd4e2, 0 0 20px #9bd4e2;
 }
